@@ -15,6 +15,11 @@ string eval merging - must allow at least viewing of source for called subs defi
 
 =head2 Changes in Devel::NYTProf 3.02
 
+  Fixed handling of usecputime=1 option
+
+XXX Fixed one problem but results are *10 on my mac.
+XXX Needs tests.
+
   Added high-resolution (100ns) timer for Mac OS X
     thanks to Markus Peter.
 
